[gd_scene load_steps=8 format=3 uid="uid://6kap25li4jd"]

[ext_resource type="Script" uid="uid://ce2jfkt73xovq" path="res://Scenes/Turret/turret.gd" id="1_5s8j8"]
[ext_resource type="Texture2D" uid="uid://cheu6257hbd4k" path="res://Scenes/Turret/canon_base.svg" id="2_etrqn"]
[ext_resource type="Texture2D" uid="uid://67xpohjqxyj1" path="res://Scenes/Turret/canon_head.svg" id="3_d3rns"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cqkdy"]
size = Vector2(1110, 625)

[sub_resource type="Animation" id="Animation_5s8j8"]
resource_name = "Idle"
length = 4.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret Head:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -3.141592653589793, 0.0]
}

[sub_resource type="Animation" id="Animation_of7hb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret Head:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7twe"]
_data = {
&"Idle": SubResource("Animation_5s8j8"),
&"RESET": SubResource("Animation_of7hb")
}

[node name="Turret" type="Node2D"]
script = ExtResource("1_5s8j8")
cooldown = 2.0

[node name="Turret Base" type="Sprite2D" parent="."]
position = Vector2(0, -24)
texture = ExtResource("2_etrqn")

[node name="Turret Head" type="Sprite2D" parent="."]
position = Vector2(7, -57)
texture = ExtResource("3_d3rns")
centered = false
offset = Vector2(-26, -26)

[node name="Projectile Spawn Location" type="Marker2D" parent="Turret Head"]
unique_name_in_owner = true
position = Vector2(54, 5)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -1)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -252.5)
shape = SubResource("RectangleShape2D_cqkdy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_s7twe")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
